<resources>
    <string name="app_name">Android News</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="read_post">Read Post</string>
    <string name="create_post">Create Post</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload image</string>
    <string name="tags">Tags</string>
    <string name="post">Post</string>
    <string name="location">Location</string>
    <string name="create">Create</string>
    <string name="post_title">Post Title</string>
    <string name="some_description">This is some description for this post</string>
    <string name="picture">Picture</string>
    <string name="like_5_dislike_2">Like 5 Dislike 2</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_post">Sort post</string>
    <string name="sort_post_key">sort_post_key</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="posts_by_date_summary">Sort posts by date</string>
    <string name="prefer_sort_post_date_key">prefer_sort_post_date_key</string>
    <string name="Sort_by_popularity">Sort by popularity</string>
    <string name="Sort_posts_by_popularity">Sort posts by popularity</string>
    <string name="sort_post_popularity_key">sort_post_popularity_key</string>
    <string name="Sort_comments">Sort comments</string>
    <string name="sort_comments_key">sort_comments_key</string>
    <string name="sort_comment_by_date">Sort comment by date</string>
    <string name="sort_comment_date_key">sort_comment_date_key</string>
    <string name="sort_comments_by_popularity">Sort comments by popularity</string>
    <string name="sort_comment_popularity_key">sort_comment_popularity_key</string>
    <string name="log_out">Log out</string>
    <string name="create_btn">Create</string>
    <string name="upload_image_btn">Upload photo</string>
</resources>
