<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"/>

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"/>
    <Button
        android:id="@+id/image_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        />
    <EditText
        android:id="@+id/tags_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tags"
        android:layout_marginTop="20dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_marginTop="20dp"
        android:inputType="text"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"/>
</LinearLayout>
