<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <Button
        android:id="@+id/btn_read_post_activity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/read_post"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:onClick="StartReadPostActivity"/>

    <Button
        android:id="@+id/btn_create_post_activity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/create_post"
        android:layout_marginStart="100dp"
        android:onClick="StartCreatePostActivity"
        />
    <Button
        android:id="@+id/btn_settings_activity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginStart="100dp"
        android:onClick="OpenSettings"/>
</LinearLayout>
